--- a/OC Share Sheet/MainInterface.storyboard
+++ b/OC Share Sheet/MainInterface.storyboard
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="UTF-8" standalone="no"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="6250" systemVersion="14C1510" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" initialViewController="yQd-yC-53O">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="6751" systemVersion="14B25" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" initialViewController="yQd-yC-53O">
     <dependencies>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="6244"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="6736"/>
         <capability name="Constraints to layout margins" minToolsVersion="6.0"/>
     </dependencies>
     <scenes>
@@ -76,7 +76,7 @@
                                                             <nil key="highlightedColor"/>
                                                         </label>
                                                         <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" misplaced="YES" text="Label" lineBreakMode="middleTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="fxo-QZ-KZW">
-                                                            <rect key="frame" x="55" y="20" width="390" height="20"/>
+                                                            <rect key="frame" x="55" y="20" width="417" height="20"/>
                                                             <fontDescription key="fontDescription" name="HelveticaNeue" family="Helvetica Neue" pointSize="18"/>
                                                             <color key="textColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                                                             <nil key="highlightedColor"/>
@@ -88,6 +88,7 @@
                                                         <constraint firstItem="Rzu-rB-SXM" firstAttribute="top" secondItem="fxo-QZ-KZW" secondAttribute="bottom" constant="10" id="EgU-4t-dJ0"/>
                                                         <constraint firstItem="Rzu-rB-SXM" firstAttribute="top" secondItem="fxo-QZ-KZW" secondAttribute="bottom" constant="10" id="PA8-cG-17d"/>
                                                         <constraint firstItem="fxo-QZ-KZW" firstAttribute="leading" secondItem="gbd-Lz-hZi" secondAttribute="leading" constant="55" id="SJN-Yw-jtE"/>
+                                                        <constraint firstAttribute="trailing" secondItem="fxo-QZ-KZW" secondAttribute="trailing" constant="8" id="hNj-ja-jcC"/>
                                                         <constraint firstAttribute="bottom" secondItem="Rzu-rB-SXM" secondAttribute="bottom" constant="20" id="kU2-xH-NUD"/>
                                                         <constraint firstItem="fxo-QZ-KZW" firstAttribute="top" secondItem="gbd-Lz-hZi" secondAttribute="top" constant="20" id="nAg-2r-p6f"/>
                                                     </constraints>
