--- a/Owncloud iOs Client WatchKit App/Base.lproj/Interface.storyboard
+++ b/Owncloud iOs Client WatchKit App/Base.lproj/Interface.storyboard
@@ -10,21 +10,26 @@
             <objects>
                 <controller id="AgC-eL-Hgc" customClass="RootRingController" customModule="Owncloud_iOs_Client_WatchKit_Extension">
                     <items>
-                        <group width="1" height="120" alignment="center" id="bRP-6i-6zE" userLabel="Group Image">
+                        <group width="1" height="120" alignment="center" contentMode="scaleAspectFit" id="bRP-6i-6zE" userLabel="Group Image">
                             <items>
-                                <imageView width="1" height="1" alignment="center" contentMode="scaleAspectFit" id="7s6-LN-z4k"/>
+                                <label width="1" alignment="center" verticalAlignment="center" text="550MB" textAlignment="center" id="E52-MG-gia">
+                                    <color key="textColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                                    <fontDescription key="font" type="system" pointSize="28"/>
+                                </label>
                             </items>
                         </group>
                         <group width="1" height="27" alignment="center" verticalAlignment="bottom" id="lB4-9e-e2o" userLabel="Group Title">
                             <items>
                                 <label width="1" alignment="center" verticalAlignment="center" text="Data ocuppied" textAlignment="center" id="Gse-Wz-Amf">
-                                    <fontDescription key="font" style="UICTFontTextStyleSubhead"/>
+                                    <fontDescription key="font" type="system" pointSize="14"/>
                                 </label>
                             </items>
                         </group>
                     </items>
                     <connections>
-                        <outlet property="progressImage" destination="7s6-LN-z4k" id="F4b-Sl-yYs"/>
+                        <outlet property="detailLabel" destination="Gse-Wz-Amf" id="spQ-o1-BrS"/>
+                        <outlet property="progressGroup" destination="bRP-6i-6zE" id="9pR-VV-a40"/>
+                        <outlet property="sizeLabel" destination="E52-MG-gia" id="Rpj-RC-mtC"/>
                         <segue destination="4Jf-bF-Lor" kind="relationship" relationship="nextPage" id="qnp-FX-cEM"/>
                     </connections>
                 </controller>
@@ -36,21 +41,26 @@
             <objects>
                 <controller id="4Jf-bF-Lor" customClass="SecondRingController" customModule="Owncloud_iOs_Client_WatchKit_Extension">
                     <items>
-                        <group width="1" height="120" alignment="center" id="ZXf-uc-Atj" userLabel="Group Image">
+                        <group width="1" height="120" alignment="center" contentMode="scaleAspectFit" id="ZXf-uc-Atj" userLabel="Group Image">
                             <items>
-                                <imageView width="1" height="1" alignment="center" contentMode="scaleAspectFit" id="fWS-jv-Sxu"/>
+                                <label width="1" alignment="center" verticalAlignment="center" text="550MB" textAlignment="center" id="RUh-Ml-jPL">
+                                    <color key="textColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                                    <fontDescription key="font" type="system" pointSize="28"/>
+                                </label>
                             </items>
                         </group>
                         <group width="1" height="27" alignment="center" verticalAlignment="bottom" id="ypk-Iq-b90" userLabel="Group Title">
                             <items>
                                 <label width="1" alignment="center" verticalAlignment="center" text="Data split" textAlignment="center" id="4j2-YU-4kD">
-                                    <fontDescription key="font" style="UICTFontTextStyleSubhead"/>
+                                    <fontDescription key="font" type="system" pointSize="14"/>
                                 </label>
                             </items>
                         </group>
                     </items>
                     <connections>
-                        <outlet property="progressImage" destination="fWS-jv-Sxu" id="eiQ-NZ-Qwz"/>
+                        <outlet property="detailLabel" destination="4j2-YU-4kD" id="MDM-Qe-Flx"/>
+                        <outlet property="progressGroup" destination="ZXf-uc-Atj" id="Llv-sr-HJf"/>
+                        <outlet property="sizeLabel" destination="RUh-Ml-jPL" id="YY1-al-iw9"/>
                     </connections>
                 </controller>
             </objects>
