--- a/Owncloud iOs Client WatchKit App/Base.lproj/Interface.storyboard
+++ b/Owncloud iOs Client WatchKit App/Base.lproj/Interface.storyboard
@@ -10,18 +10,26 @@
             <objects>
                 <controller id="AgC-eL-Hgc" customClass="RootRingController" customModule="Owncloud_iOs_Client_WatchKit_Extension">
                     <items>
-                        <group width="1" height="1" alignment="center" backgroundImage="images_ring-0" contentMode="scaleAspectFit" id="bRP-6i-6zE" userLabel="Group Image">
+                        <group width="1" height="1" alignment="center" verticalAlignment="center" backgroundImage="images_ring-0" contentMode="scaleAspectFit" layout="vertical" id="bRP-6i-6zE" userLabel="Group Image">
                             <items>
-                                <label width="1" alignment="center" verticalAlignment="center" text="550MB" textAlignment="center" id="E52-MG-gia">
-                                    <color key="textColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
-                                    <fontDescription key="font" type="system" pointSize="28"/>
-                                </label>
+                                <group width="100" height="56" alignment="center" verticalAlignment="center" layout="vertical" id="TMx-3L-KnE">
+                                    <items>
+                                        <label width="1" height="28" alignment="center" text="550MB" textAlignment="center" id="Cf3-Kk-KwR">
+                                            <color key="textColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                                            <fontDescription key="font" type="system" pointSize="27"/>
+                                        </label>
+                                        <label width="1" height="17" alignment="center" text="OF 25GB" textAlignment="center" id="8Os-iR-nlJ">
+                                            <fontDescription key="font" type="system" pointSize="14"/>
+                                        </label>
+                                    </items>
+                                </group>
                             </items>
                         </group>
                     </items>
                     <connections>
                         <outlet property="progressGroup" destination="bRP-6i-6zE" id="9pR-VV-a40"/>
-                        <outlet property="sizeLabel" destination="E52-MG-gia" id="Rpj-RC-mtC"/>
+                        <outlet property="sizeDetailLabel" destination="8Os-iR-nlJ" id="yXA-Pe-Et9"/>
+                        <outlet property="sizeLabel" destination="Cf3-Kk-KwR" id="E8t-QF-79A"/>
                         <segue destination="4Jf-bF-Lor" kind="relationship" relationship="nextPage" id="UbB-B5-jPt"/>
                     </connections>
                 </controller>
@@ -33,18 +41,26 @@
             <objects>
                 <controller id="4Jf-bF-Lor" customClass="SecondRingController" customModule="Owncloud_iOs_Client_WatchKit_Extension">
                     <items>
-                        <group width="1" height="1" alignment="center" backgroundImage="media_ring-0" contentMode="scaleAspectFit" id="ZXf-uc-Atj" userLabel="Group Image">
+                        <group width="1" height="1" alignment="center" backgroundImage="media_ring-0" contentMode="scaleAspectFit" layout="vertical" id="ZXf-uc-Atj" userLabel="Group Image">
                             <items>
-                                <label width="1" alignment="center" verticalAlignment="center" text="550MB" textAlignment="center" id="RUh-Ml-jPL">
-                                    <color key="textColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
-                                    <fontDescription key="font" type="system" pointSize="28"/>
-                                </label>
+                                <group width="100" height="56" alignment="center" verticalAlignment="center" layout="vertical" id="VbU-Bl-yfD">
+                                    <items>
+                                        <label width="1" height="28" alignment="center" text="550MB" textAlignment="center" id="hPL-lG-IkM">
+                                            <color key="textColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                                            <fontDescription key="font" type="system" pointSize="27"/>
+                                        </label>
+                                        <label width="1" height="17" alignment="center" text="OF 25GB" textAlignment="center" id="Ku4-7X-ry0">
+                                            <fontDescription key="font" type="system" pointSize="14"/>
+                                        </label>
+                                    </items>
+                                </group>
                             </items>
                         </group>
                     </items>
                     <connections>
                         <outlet property="progressGroup" destination="ZXf-uc-Atj" id="Llv-sr-HJf"/>
-                        <outlet property="sizeLabel" destination="RUh-Ml-jPL" id="YY1-al-iw9"/>
+                        <outlet property="sizeDetailLabel" destination="Ku4-7X-ry0" id="1zN-dj-a5S"/>
+                        <outlet property="sizeLabel" destination="hPL-lG-IkM" id="rAS-tw-X6P"/>
                         <segue destination="mbL-g6-0cE" kind="relationship" relationship="nextPage" id="hgj-HF-dwO"/>
                     </connections>
                 </controller>
@@ -56,18 +72,26 @@
             <objects>
                 <controller id="mbL-g6-0cE" customClass="ThirdRingController" customModule="Owncloud_iOs_Client_WatchKit_Extension">
                     <items>
-                        <group width="1" height="1" alignment="center" backgroundImage="other_ring-0" contentMode="scaleAspectFit" id="Ft5-bT-Zzl" userLabel="Group Image">
+                        <group width="1" height="1" alignment="center" backgroundImage="other_ring-0" contentMode="scaleAspectFit" layout="vertical" id="Ft5-bT-Zzl" userLabel="Group Image">
                             <items>
-                                <label width="1" alignment="center" verticalAlignment="center" text="550MB" textAlignment="center" id="MKv-5t-Fre">
-                                    <color key="textColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
-                                    <fontDescription key="font" type="system" pointSize="28"/>
-                                </label>
+                                <group width="100" height="56" alignment="center" verticalAlignment="center" layout="vertical" id="e00-09-YLl">
+                                    <items>
+                                        <label width="1" height="28" alignment="center" text="550MB" textAlignment="center" id="0tF-Tg-HRz">
+                                            <color key="textColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                                            <fontDescription key="font" type="system" pointSize="27"/>
+                                        </label>
+                                        <label width="1" height="17" alignment="center" text="OF 25GB" textAlignment="center" id="ULR-mo-puJ">
+                                            <fontDescription key="font" type="system" pointSize="14"/>
+                                        </label>
+                                    </items>
+                                </group>
                             </items>
                         </group>
                     </items>
                     <connections>
                         <outlet property="progressGroup" destination="Ft5-bT-Zzl" id="JDS-rm-Ka0"/>
-                        <outlet property="sizeLabel" destination="MKv-5t-Fre" id="YNp-ob-SFD"/>
+                        <outlet property="sizeDetailLabel" destination="ULR-mo-puJ" id="OuM-gQ-enE"/>
+                        <outlet property="sizeLabel" destination="0tF-Tg-HRz" id="DxG-0H-3fj"/>
                     </connections>
                 </controller>
             </objects>
@@ -78,7 +102,7 @@
             <objects>
                 <controller id="wrF-sl-fr9" customClass="ThreeRingsController" customModule="Owncloud_iOs_Client_WatchKit_Extension">
                     <items>
-                        <group width="1" height="1" alignment="left" id="g05-Qk-Wy4">
+                        <group width="1" height="1" alignment="left" layout="vertical" id="g05-Qk-Wy4">
                             <items>
                                 <group width="1" height="1" alignment="left" backgroundImage="out_kind_ring-0" contentMode="scaleAspectFit" id="7ug-HO-D88" userLabel="OutRing">
                                     <items>
